syntax = "proto3";

package synq.ingest.dwh.v1;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/getsynq/api/ingest/dwh/v1";

message Fqn {
  string instance_name = 1;
  string database_name = 2;
  string schema_name = 3;
  string object_name = 4 [(buf.validate.field) = {required: true}];
}

message ObjectInformation {
  Fqn fqn = 1;
  string object_native_type = 2;
  bool is_view = 3;
  bool is_table = 6;
  repeated Tag tags = 4;
  optional string description = 5;
}

message SqlDefinition {
  Fqn fqn = 1;
  string sql = 2;
}

message Schema {
  Fqn fqn = 1;
  repeated SchemaColumn columns = 2;
}

message SchemaColumn {
  string name = 1;
  string native_type = 2;
  int32 ordinal_position = 3;
  optional string description = 4;
  repeated Tag tags = 5;
  bool is_struct = 6;
  bool is_repeated = 7;
  repeated SchemaColumnField fields = 8;
}

message SchemaColumnField {
  string name = 1;
  string native_type = 2;
  optional string description = 3;
  int32 ordinal_position = 4;
  bool is_struct = 5;
  bool is_repeated = 6;
  repeated SchemaColumnField fields = 7;
}

message ObjectMetrics {
  Fqn fqn = 1;
  optional int64 row_count = 2;
  optional google.protobuf.Timestamp updated_at = 3;
  optional int64 size_bytes = 4;
}

message Tag {
  string tag_name = 1;
  string tag_value = 2;
}
